@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2019-01-01 r75936) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-01-10 r75962) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -3133,11 +3133,17 @@ Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’
 > 
 > x <- c(2,2:4,4,4,5,5,7,7,7)
 > y <- c(1:6, 5:4, 3:1)
-> approx(x, y, xout = x)$y # warning
+> (amy <- approx(x, y, xout = x)$y) # warning, can be avoided by specifying 'ties=':
+Warning in regularize.values(x, y, ties, missing(ties)) :
+  collapsing to unique 'x' values
  [1] 1.5 1.5 3.0 5.0 5.0 5.0 4.5 4.5 2.0 2.0 2.0
-> (ay <- approx(x, y, xout = x, ties = "ordered")$y)
+> op <- options(warn=2) # warnings would be error
+> stopifnot(identical(amy, approx(x, y, xout = x, ties=mean)$y))
+> options(op) # revert
+> (ay  <- approx(x, y, xout = x, ties = "ordered")$y)
  [1] 2 2 3 6 6 6 4 4 1 1 1
-> stopifnot(ay == c(2,2,3,6,6,6,4,4,1,1,1))
+> stopifnot(amy == c(1.5,1.5, 3, 5,5,5, 4.5,4.5, 2,2,2),
++           ay  == c(2, 2,    3, 6,6,6, 4, 4,    1,1,1))
 > approx(x, y, xout = x, ties = min)$y
  [1] 1 1 3 4 4 4 4 4 1 1 1
 > approx(x, y, xout = x, ties = max)$y
@@ -16117,11 +16123,35 @@ Warning in spline(x, y, n = 201, method = "periodic") :
 > set.seed(1); x <- round(rnorm(30), 1); y <- sin(pi * x) + rnorm(30)/10
 > plot(x, y, main = "spline(x,y)  when x has ties")
 > lines(spline(x, y, n = 201), col = 2)
+Warning in regularize.values(x, y, ties, missing(ties)) :
+  collapsing to unique 'x' values
 > ## visualizes the non-unique ones:
 > tx <- table(x); mx <- as.numeric(names(tx[tx > 1]))
 > ry <- matrix(unlist(tapply(y, match(x, mx), range, simplify = FALSE)),
 +              ncol = 2, byrow = TRUE)
 > segments(mx, ry[, 1], mx, ry[, 2], col = "blue", lwd = 2)
+> 
+> ## Another example with sorted x, but ties:
+> set.seed(8); x <- sort(round(rnorm(30), 1)); y <- round(sin(pi * x) + rnorm(30)/10, 3)
+> summary(diff(x) == 0) # -> 7 duplicated x-values
+   Mode   FALSE    TRUE 
+logical      22       7 
+> str(spline(x, y, n = 201, ties="ordered")) # all '$y' entries are NaN
+List of 2
+ $ x: num [1:201] -3 -2.98 -2.95 -2.92 -2.9 ...
+ $ y: num [1:201] NaN NaN NaN NaN NaN NaN NaN NaN NaN NaN ...
+> ## The default (ties=mean) is ok, but most efficient to use instead is
+> sxyo <- spline(x, y, n = 201, ties= list("ordered", mean))
+> sapply(sxyo, summary)# all fine now
+            x           y
+Min.    -3.00 -1.07800000
+1st Qu. -1.75 -0.57050000
+Median  -0.50 -0.13613265
+Mean    -0.50 -0.08208311
+3rd Qu.  0.75  0.50611122
+Max.     2.00  1.03072752
+> plot(x, y, main = "spline(x,y, ties=list(\"ordered\", mean)  for when x has ties")
+> lines(sxyo, col="blue")
 > 
 > ## An example of monotone interpolation
 > n <- 20
@@ -18596,7 +18626,7 @@ Number of Fisher Scoring iterations: 6
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  6.371 0.198 6.688 0 0 
+Time elapsed:  3.486 0.186 3.843 0 0 
 > grDevices::dev.off()
 null device 
           1 
